@@ -54,11 +54,11 @@ class Playlister:
         self.allowCache = allowed
 
     def _addPlaylistFragment(self, sequenceNumber, duration, encrypted):
-        # Fragments are suposed to have a constant duration. Set the
-        # target duration from this value except if it's the first fragment,
-        # as it might be longer than the rest(encoder's fault). The playlist
-        # won't be rendered until we have at least 2 fragments
-        if self._duration is None and sequenceNumber != 0:
+        # Fragments are supposed to have a constant duration which is used
+        # to set the target duration. This value will be overwritten if
+        # it's retrieved from the very first fragment as it might be longer
+        # than the rest due to innacuracies in the encoder.
+        if self._duration is None or sequenceNumber == 1:
             self._duration = duration
         self._counter = sequenceNumber + 1
         fragmentName = '%s-%s.ts' % (self.fragmentPrefix, sequenceNumber)
@@ -84,7 +84,7 @@ class Playlister:
         lines.append("#EXTM3U")
         lines.append("#EXT-X-ALLOW-CACHE:%s" %
                 (self.allowCache and 'YES' or 'NO'))
-        lines.append("#EXT-X-TARGETDURATION:%d" % self._duration or 10)
+        lines.append("#EXT-X-TARGETDURATION:%d" % self._duration)
         lines.append("#EXT-X-MEDIA-SEQUENCE:%d" %
             (self._counter - len(self._fragments)))
 
